[package]
name = "dot_crocotile"
version = "0.2.0"
authors = ["David Edmonds <edmonds.d.r@gmail.com>"]
description = "A Rust library for loading .crocotile files."
license = "MIT"
keywords = ['crocotile', 'crocotile-3d', 'game', 'game-dev']
documentation = "https://docs.rs/dot_crocotile"
homepage = "https://docs.rs/dot_crocotile"
repository = "https://github.com/davidedmonds/dot_crocotile"
readme = "README.md"

[dependencies]
base64 = "0.8"
failure = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"